# chainsaw

./: .gitignore  Cargo.toml  Dockerfile  LICENCE  Makefile  Makefile.toml  README.org  build.rs  chainsaw-http-deploy.yaml  chainsaw.toml
chainsaw/: Cargo.toml
chainsaw-demo/: Cargo.toml  chainsaw.toml
chainsaw-demo/src/: config.rs  grpc_impl.rs  health.rs  lib.rs  logging.rs  main.rs  usecases.rs
chainsaw-demo/src/logging/: logging.rs  mod.rs
chainsaw-grpcserver/: Cargo.toml
chainsaw-middleware/: Cargo.toml
chainsaw-middleware/src/: auth.rs  jwt.rs  lib.rs
chainsaw-observe/: Cargo.toml
chainsaw-observe/src/: lib.rs  logging.rs  metrics.rs
chainsaw-proto/: Cargo.toml
chainsaw-proto/proto/: helloworld.proto
chainsaw-proto/src/: lib.rs
chainsaw-proto/src/grpc/: helloworld.v1.rs  mod.rs
chainsaw-proto/src/grpc/helloworld/: v1.rs
chainsaw/src/: config.rs  lib.rs
helm/chainsaw-http/: Chart.yaml  values.yaml
helm/chainsaw-http/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  istio-gateway.yaml  istio-virtualservice.yaml  service.yaml  serviceaccount.yaml
src/: client.rs  grpc.rs  grpc_impl.rs  lib.rs  logging.rs  main.rs  server.rs
src/grpc/: mod.rs
src/logging/: logging.rs
