[package]
name = "chainsaw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# grpc and protobuf implementations
tonic = "0.6"
prost = "0.9"

# async runtime
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "tracing"] }

# structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "json"] }
tracing-error = "0.2"
tracing-log = "0.1"
color-eyre = "0.5"

# cli and config
clap = { version = "3.0", features = ["derive", "env"] }

[build-dependencies]
tonic-build = "0.6" # build grpc code at compile-time
