[package]
name = "chainsaw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "hello"

[dependencies]
# grpc and protobuf implementations
tonic = "0.6"
prost = "0.9"
tonic-health = "0.5"

# async runtime
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "tracing", "signal", "parking_lot"] }

# structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "json"] }
tracing-error = "0.2"
tracing-log = "0.1"
color-eyre = "0.6"

# configuration
config = "0.11"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.6" # build grpc code at compile-time

[profile.dev.package.backtrace]
# this is a performance optimisation for color-eyre, as the non-std
# backtrace::Backtrace implementation does not contain pre-compiled optimations
# like the std library implementation. See here:
#
# https://docs.rs/color-eyre/0.6.0/color_eyre/index.html#improving-perf-on-debug-builds
opt-level = 3
