[package]
name = "chainsaw-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
# grpc and protobuf implementations
tonic = "0.7"
tonic-health = "0.6"
chainsaw-proto = { path = "../chainsaw-proto" }
chainsaw-middleware = { path = "../chainsaw-middleware" }
chainsaw-observe = { path = "../chainsaw-observe" }
tower = "0.4.12"
tower-http = { version = "0.2.2", features = ["auth", "sensitive-headers", "trace"] }
hyper = "0.14.17"

# http application framework
axum = "0.4.5"

# async runtime
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "tracing", "signal", "parking_lot"] }

# structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "json"] }
console-subscriber = { version = "0.1.4", features = ["parking_lot"] }
tracing-error = "0.2"
tracing-log = "0.1"
color-eyre = "0.6"

# metrics
prometheus = { version = "0.13", features = ["process"] }

# configuration
config = "0.11"
serde = { version = "1.0", features = ["derive"] }
