[package]
name = "chainsaw-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# grpc and protobuf implementations
chainsaw = { path = "../chainsaw" }
chainsaw-middleware = { path = "../chainsaw-middleware" }
chainsaw-observe = { path = "../chainsaw-observe" }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["full"] }
hyper = "0.14.20"

# http application framework
axum = { version = "0.5.16", features = ["headers"] }

# async runtime
tokio = { version = "1.21", features = ["macros", "rt-multi-thread", "tracing", "signal", "parking_lot"] }

# structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["fmt", "env-filter", "json"] }
console-subscriber = { version = "0.1.8", features = ["parking_lot"] }
tracing-error = "0.2"
tracing-log = "0.1"
color-eyre = "0.6"

# metrics
prometheus = { version = "0.13", features = ["process"] }

# configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

# functionality
ffxiv_types = "1.8.0"
reqwest = "0.11.12"

[dev-dependencies]
pretty_assertions = "1.3.0"
