[package]
name = "chainsaw-middleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.14"
jsonwebtoken = "8.0.1"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
tonic = "0.6"
tower = "0.4.11"
tower-http = { version = "0.2.2", features = ["auth"] }
tracing = "0.1"
