[package]
name = "chainsaw-middleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.14"
jsonwebtoken = "8.1.1"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
tonic = "0.8"
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["auth"] }
tracing = "0.1"
