[package]
name = "chainsaw-observe"
version = "0.1.0"
edition = "2021"

[dependencies]
chainsaw = { path = "../chainsaw" }

tower = "*"
http = "0.2.8"
tower-http = { version = "0.3.4", features = ["auth", "sensitive-headers", "trace"] }
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "json"] }
console-subscriber = { version = "0.1.8", features = ["parking_lot"] }
tracing-log = "0.1"
color-eyre = "0.6"

tokio = { version = "*", features = ["macros"] }

# metrics support
prometheus = { version = "0.13", features = ["process"] }
hyper = "0.14.20"
axum = "0.5.16"
