[package]
name = "chainsaw-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.7"
prost = "0.10"
prost-types = "0.10"

[build-dependencies]
tonic-build = "0.7" # build grpc code at compile-time
